# nifty50-stock-analysis

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  makefile  pipeline.py  pyproject.toml  requirements.txt
dbt-project/: dbt_project.yml  profiles.yml
dbt-project/macros/: finance_utils.sql
dbt-project/models/marts/: mart_monthly_performance.sql  mart_sector_analysis.sql  mart_stock_volatility.sql
dbt-project/models/staging/: schema.yml  sources.yaml  stg_stock_metadata.sql  stg_stock_prices.sql
dbt-project/seeds/: nifty50_sectors.csv
evidence/: .gitignore  Dockerfile  evidence.config.yaml  package.json
evidence/pages/: index.md
evidence/sources/warehouse/: connection.yaml  mart_monthly_performance.sql  mart_sector_analysis.sql  mart_stock_volatility.sql  stocks.sql
python_scripts/: extract.py  ingest.py
