[project]
name = "nifty50-stock-analysis"
version = "0.1.0"
description = "NIFTY-50 stock market data pipeline with Prefect, dbt, DuckDB and Evidence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core>=1.11.0",
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.5.0",
    "kaggle>=1.6.0",
    "pandas>=2.0.0",
    "prefect>=3.6.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
]
